<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".UploadPhotos">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/add_photos"
        android:textColor="@color/black"
        android:fontFamily="@font/avocado"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/dashed_rounded_corner_rect"
        android:gravity="center"
        android:minHeight="200dp"
        android:orientation="vertical"
        android:paddingVertical="40dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintHeight_default="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/image_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/round"
            android:text="@string/pick_a_photo"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pickImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/round"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:text="@string/choose"
            android:textAllCaps="false"
            android:textColor="@color/pink_A200"
            android:textSize="20sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="30dp"
            app:elevation="0dp"
            app:strokeColor="@color/pink_A200"
            app:strokeWidth="2dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/chosen_photos"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@font/round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/chosenImageContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:layout_margin="15dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/noImageChosen"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/no_image"
            android:textSize="12sp"
            android:textStyle="bold"
            android:fontFamily="@font/round"
            android:lineSpacingExtra="5dp"
            android:background="@drawable/rounded_corner_stroke"
            android:gravity="center"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:fontFamily="@font/round"
        android:paddingVertical="12dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:backgroundTint="@color/pink_A200"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>