<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FilterFragment">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="@font/avocado"
        android:text="@string/apply_filters"
        android:textColor="@color/pink_A200"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:ellipsize="end"
        android:checked="true"
        android:fontFamily="@font/round"
        android:maxLines="2"
        android:paddingHorizontal="4dp"
        android:text="@string/age"
        android:textColor="@color/pink_A100"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/age">

        <EditText
            android:id="@+id/ageStartVal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:autofillHints="no"
            android:background="@drawable/edit_text_bag"
            android:fontFamily="@font/round"
            android:gravity="center_horizontal"
            android:hint="@string/starting"
            android:inputType="number"
            android:paddingVertical="13dp"
            android:paddingHorizontal="20dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ageEndVal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:autofillHints="no"
            android:background="@drawable/edit_text_bag"
            android:fontFamily="@font/round"
            android:gravity="center_horizontal"
            android:hint="@string/end"
            android:inputType="number"
            android:paddingVertical="13dp"
            android:paddingHorizontal="20dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:checked="true"
        android:ellipsize="end"
        android:fontFamily="@font/round"
        android:maxLines="2"
        android:paddingHorizontal="4dp"
        android:text="@string/gender"
        android:textColor="@color/pink_A100"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:layout_editor_absoluteX="30dp" />

    <RadioGroup
        android:id="@+id/genderFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:checkedButton="@id/male"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/gender">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:background="@android:color/transparent"
            android:button="@android:color/transparent"
            android:drawableTop="@drawable/ic_male"
            android:drawablePadding="10dp"
            android:fontFamily="@font/round"
            android:gravity="center_horizontal"
            android:text="@string/male"
            android:textColor="@color/gray_pink" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:background="@android:color/transparent"
            android:button="@android:color/transparent"
            android:drawableTop="@drawable/ic_female"
            android:drawablePadding="10dp"
            android:fontFamily="@font/round"
            android:gravity="center_horizontal"
            android:text="@string/female"
            android:textColor="@color/gray_pink" />


    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/applyFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/round"
        android:paddingVertical="12dp"
        android:text="@string/apply_filters"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:backgroundTint="@color/pink_A200"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>