<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="130dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avocado"
        android:text="@string/dateme"
        android:textColor="@color/pink_A200"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="28dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/round"
            android:text="@string/log_in"
            android:textColor="@color/pink_A100"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bag"
            android:drawableEnd="@drawable/ic_mail"
            android:drawableRight="@drawable/ic_mail"
            android:fontFamily="@font/rocko"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingVertical="13dp"
            android:paddingStart="30dp"
            android:paddingLeft="30dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bag"
            android:drawableEnd="@drawable/ic_lock"
            android:drawableRight="@drawable/ic_lock"
            android:fontFamily="@font/rocko"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingVertical="13dp"
            android:paddingStart="30dp"
            android:paddingLeft="30dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/round"
            android:paddingVertical="12dp"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColor="@color/white"
            app:backgroundTint="@color/pink_A200"
            app:cornerRadius="30dp" />

        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/new_user_si" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="40dp"
                android:background="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/white"
                android:fontFamily="@font/round"
                android:paddingHorizontal="20dp"
                android:text="@string/or" />
        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/round"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/log_in_with_google"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="30dp"
            app:icon="@drawable/google"
            app:iconPadding="20dp"
            app:iconSize="30dp"
            app:iconTint="@null" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>